@@ -22,22 +22,22 @@ the Story you're trying to find. Fill in any or all of the fields and
 click <i>Search</i>. To restart your search with a fresh page, click
 <i>Clear</i>.<br/>
 
-When searching by Story ID, you may also find archived or trashed
-stories.  For archived stories the status column will indicate
-'Archive', for trashed stories, 'Trash'.
+When searching by Story ID, you may also find retired or trashed
+stories.  For retired stories the status column will indicate
+'Retired', for trashed stories, 'Trash'.
 
 </li>
 </ul>
 
 <p>
 After completing your Search and finding the Story you are looking
-for, you can Edit, Check Out, View, Copy, Archive, Publish or Delete
+for, you can Edit, Check Out, View, Copy, Retire, Publish or Delete
 the Story (depending on your permission set).
 </p>
 
 <p>
 If you didn't find what you are looking for, you may click <i>Search
-in Archive</i> to start the same search in the Archive.
+Retired Stories</i> to start the same search in the retire area.
 </p>
 
 <hr>
